# wave_stream

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  wave_stream.code-workspace
.github/workflows/: check-and-lint.yaml  test.yaml
src/: assertions.rs  constants.rs  lib.rs  open_wav.rs  reader.rs  samples_by_channel.rs  upconvert.rs  wave_header.rs  wave_reader.rs  wave_writer.rs  writer.rs
src/wave_reader/: mod.rs  random.rs  stream.rs
src/wave_writer/: mod.rs  random.rs  stream.rs
