[package]
name = "wave_stream"
description = "Wave file reader and writer. Random access and streaming is supported for reading, random access is supported for writing"
version = "0.3.0"
edition = "2021"
authors = ["Andrew Rondeau <git@andrewrondeau.com>"]
keywords = ["wav", "wave", "audio", "sound", "dsp"]
categories = ["multimedia::audio", "encoding"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/GWBasic/wave_stream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tempfile = "3.3.0"
test-case = "3.0.0"
